Added optional volumes for database

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       POSTGRES_USER: ddtemplate
       POSTGRES_PASSWORD: ddtemplate
       POSTGRES_DB: ddtemplate
+    #volumes:
+    #  - data-volume:/var/lib/postgresql/data
 
   isort:
     <<: *base
