--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pytest = "^7.0.0"
 pylint = "^2.12.2"
 ipython = "^8.0.1"
 pdbpp = "^0.10.3"
+django-filter = "^21.1"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
